--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(SOURCE_FILES
+  src/curve-matrix.cpp
   src/draggable.cpp
   src/extrude.cpp
   src/gradient-mesh.cpp
@@ -17,6 +18,7 @@ set(SOURCE_FILES
   src/io.cpp
   src/merge-conditions.cpp
   src/merging.cpp
+  src/patch-matrix.cpp
   src/splitting.cpp
   src/tessellation.cpp
   src/vector2.cpp
